// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`allows safe captures (module const, signal, import) 1`] = `
"mark  app.tsx:5 onClick

app.tsx
import { useSignal } from "@qwik.dev/core";
import { STEP } from "./consts.ts";
export function App() {
  const count = useSignal(0);
  return <button onClick$={() => (count.value += STEP)}>+</button>;
}
"
`;

exports[`ignores non-event host attributes 1`] = `""`;

exports[`marks a direct host event handler 1`] = `
"mark  app.tsx:4 onClick

app.tsx
import { useSignal } from "@qwik.dev/core";
export function App() {
  const count = useSignal(0);
  return <button onClick$={() => count.value++}>+1</button>;
}
"
`;

exports[`marks across several host event types 1`] = `
"mark  app.tsx:2 onSubmit
mark  app.tsx:3 onChange
mark  app.tsx:4 onKeyDown

app.tsx
export const App = () => (
  <form onSubmit$={(e) => send(e)}>
    <input onChange$={(e) => set(e)} />
    <button onKeyDown$={(e) => key(e)}>go</button>
  </form>
);
"
`;

exports[`rejects a local function capture 1`] = `"skip  app.tsx:3 onClick  (captured 'run' is a local function or class)"`;

exports[`rejects a non-serializable capture 1`] = `"skip  app.tsx:3 onClick  (captured 'socket' is not provably serializable)"`;

exports[`rejects a reassigned capture 1`] = `"skip  app.tsx:3 onClick  (captured 'n' is reassigned inside the closure)"`;
